--- a/style.css
+++ b/style.css
@@ -264,6 +264,7 @@ body {
 	box-sizing: border-box;
 	word-break: break-word;
 	background: #fff;
+	overflow-x: hidden;
 }
 
 *, *:before, *:after {
